<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="me.sudar.appportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/nano_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="30sp"
        android:text="@string/nano_apps"/>

    <Button
        android:id="@+id/spotify_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/spotify_text"/>
    <Button
        android:id="@+id/score_app_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/scores_app_text"/>

    <Button
        android:id="@+id/library_app_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/library_app_text"/>

    <Button
        android:id="@+id/build_bigger_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/build_bigger_text"/>

    <Button
        android:id="@+id/xyz_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/xyz_reader_text"/>

    <Button
        android:id="@+id/capstone_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:padding="20dp"
        android:text="@string/capstone_text"/>
</LinearLayout>
